# JobAio

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  clean.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .eslintrc.json  package.json
apps/api/data/: translated_jobs.json
apps/api/documentation/: JOBAioDocumentation.md
apps/scraper-py/: .flake8  package.json  pyproject.toml  python-tools.js  requirements.txt
apps/scraper-py/src/: .gitkeep  __init__.py  base_cli.py  job_deduplicator.py  jobly_scraper.py  main.py
apps/scraper-py/src/duunitori/: duunitori_cli.py  duunitori_extractor.py  duunitori_scraper.py
apps/scraper-py/src/job_analyzer/: __init__.py  ai_analyzer.py  base_analyzer.py  constants.py  hybrid_job_analyzer.py  pure_ai_analyzer.py
apps/scraper-py/src/jobly/: cli.py  jobly_cli.py  jobly_extractor.py  jobly_scraper.py
apps/scraper-py/tests/: test_base_analyzer  test_duunitori_scraper.py  test_job_analyzer_workflow.py  test_main.py  test_pure_ai_analyzer.py
apps/web/: .eslintrc.json  .prettierignore  components.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
documentation/: Deliverables_README.md  JOBAioDocumentation.md  Sprint2_search_eng_docs.md  sprint2_hightlight_job_docs.md
documentation/self_assessments/: Tamseela.md  self_assessment_Kumudu.md  self_assessment_Unai.md  self_assessment_Wang.md  self_assessment_taysa.md
self-assessment/: Self_Assessment_Taysa.md  self_assessment_kumudu-md
tests/: setup.js
(+72 files in other folders)
