[project]
name = "jobaio-scraper"
version = "0.1.0"
description = "AI-powered job scraping service for JobAio platform"
authors = [
    {name = "JobAio Team", email = "team@jobaio.dev"}
]
license = {text = "MIT"}
license-files = ["../../LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
